--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "files": [
     "dist/"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GetLuko/eslint-plugin-mobile-guidelines.git"
+  },
   "scripts": {
     "test": "jest",
     "build": "tsc",
