Configure NX Workspaces

--- a/package.json
+++ b/package.json
@@ -1,50 +1,31 @@
 {
-  "name": "@getluko/eslint-plugin-mobile-guidelines",
-  "author": "luko",
-  "version": "0.0.1",
-  "description": "Custom ESLint Rules & Config created by mobile team",
-  "main": "dist/",
+  "name": "eslint-getluko-react-native-guidelines",
+  "version": "0.0.2",
   "license": "MIT",
-  "files": [
-    "dist/"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/GetLuko/eslint-plugin-mobile-guidelines.git"
-  },
   "scripts": {
-    "test": "jest",
-    "build": "tsc",
-    "postinstall": "npm run build",
-    "postbuild": "rimraf dist/**/__tests__"
-  },
-  "dependencies": {
-    "@typescript-eslint/parser": "5.14.0",
-    "@typescript-eslint/types": "5.13.0",
-    "@typescript-eslint/utils": "5.13.0"
+    "build:config": "npx nx build eslint-config-react-native",
+    "build:plugin": "npx nx build eslint-plugin-react-native",
+    "prepublish": "npm run build:config && npm run build:plugin",
+    "publish:config": "cd ./dist/packages/eslint-config-react-native && npm publish",
+    "publish:plugin": "cd ./dist/packages/eslint-plugin-react-native && npm publish",
+    "publish": "npm run publish:config && npm run publish:plugin"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "eslint": "^8.18.0",
+    "@nrwl/cli": "14.4.0",
+    "@nrwl/eslint-plugin-nx": "14.4.0",
+    "@nrwl/jest": "14.4.0",
+    "@nrwl/js": "14.4.0",
+    "@nrwl/linter": "14.4.0",
+    "@nrwl/nx-cloud": "latest",
+    "@nrwl/react-native": "^14.4.0",
+    "@nrwl/web": "14.4.0",
+    "@nrwl/workspace": "14.4.0",
+    "eslint": "~8.15.0",
     "jest": "27.5.1",
-    "rimraf": "3.0.2",
-    "ts-jest": "27.1.3",
-    "typescript": "4.6.2"
-  },
-  "jest": {
-    "testRegex": ".*\\.test\\.ts$",
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "modulePathIgnorePatterns": [
-      "<rootDir>/dist/"
-    ]
-  },
-  "engines": {
-    "node": ">=8"
-  },
-  "peerDependencies": {
-    "eslint": ">=2.0.0"
+    "metro": "0.71.1",
+    "metro-babel-register": "0.71.1",
+    "nx": "14.4.0",
+    "ts-node": "~10.8.0",
+    "typescript": "~4.7.2"
   }
 }
