--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,7 +10,10 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2017", "dom"],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
@@ -23,5 +26,10 @@
       ]
     }
   },
-  "exclude": ["node_modules", "tmp", "**/__tests__/**", "**/__mocks__/**"]
+  "exclude": [
+    "node_modules",
+    "tmp",
+    "**/__tests__/**",
+    "**/__mocks__/**"
+  ]
 }
