--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
     "@nrwl/react-native": "^14.4.0",
     "@nrwl/web": "14.4.0",
     "@nrwl/workspace": "14.4.0",
+    "@types/jest": "27.4.1",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
     "jest": "27.5.1",
     "metro": "0.71.1",
     "metro-babel-register": "0.71.1",
-    "ngx-deploy-npm": "^4.1.0",
     "nx": "14.4.0",
+    "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
   }
 }
