--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@nrwl/jest": "14.4.0",
     "@nrwl/js": "14.4.0",
     "@nrwl/linter": "14.4.0",
-    "@nrwl/nx-cloud": "latest",
     "@nrwl/react-native": "^14.4.0",
     "@nrwl/web": "14.4.0",
     "@nrwl/workspace": "14.4.0",
@@ -16,6 +15,8 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "@typescript-eslint/types": "^5.29.0",
+    "@typescript-eslint/utils": "^5.29.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "27.5.1",
