Add publishConfig npm package.json

--- a/packages/eslint-config-react-native/package.json
+++ b/packages/eslint-config-react-native/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/GetLuko/eslint-react-native-guidelines"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "keywords": [
     "eslint",
     "eslintconfig",
