--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Publish packages
         run: |
+          echo "NODE_AUTH_TOKEN=$NODE_AUTH_TOKEN"
           yarn nx run-many --target=publish --all --prod --ver=${{github.event.release.tag_name}}
           env:
-            NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+            NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
