--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Publish packages
         run: |
-          echo "NODE_AUTH_TOKEN=$NODE_AUTH_TOKEN"
+          echo "NPM_TOKEN=$NPM_TOKEN"
           yarn nx run-many --target=publish --all --prod --ver=${{github.event.release.tag_name}}
           env:
-            NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+            NPM_TOKEN: ${{secrets.NPM_TOKEN}}
