--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.npmjs.org
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
