--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -48,6 +48,6 @@ jobs:
       - name: Publish packages
         run: |
           echo "NODE_AUTH_TOKEN=$NODE_AUTH_TOKEN"
-          yarn nx run-many --target=publish --all --prod --ver=${{github.event.release.tag_name}}
+          yarn nx run-many --target=publish --all --prod --ver=${{github.event.release.tag_name}} --tag=latest
           env:
             NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
