--- a/packages/eslint-config-react-native/package.json
+++ b/packages/eslint-config-react-native/package.json
@@ -39,18 +39,18 @@
   "homepage": "https://github.com/GetLuko/eslint-config-react-native",
   "devDependencies": {
     "@types/node": "17.0.21",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0 || ^8.2.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.32.0 || 8.2.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react-hooks": "4.5.0",
     "jest": "27.5.1",
     "rimraf": "3.0.2",
     "ts-jest": "27.1.3",
     "typescript": "4.6.2",
     "react": ">= 0.13.0",
-    "@getluko/eslint-plugin-react-native": "^0.0.3"
+    "@getluko/eslint-plugin-react-native": "0.0.3"
   },
   "peerDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
