--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-          registry-url: https://registry.npmjs.org
+          registry-url: https://registry.npmjs.org/
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -47,7 +47,6 @@ jobs:
 
       - name: Publish packages
         run: |
-          echo "NODE_AUTH_TOKEN=$NODE_AUTH_TOKEN"
           yarn nx run-many --target=publish --all --prod --ver=${{github.event.release.tag_name}} --tag=latest
           env:
             NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
